syntax = "proto3";

package storage;
message Types {
    oneof value {
        string stringVal = 1;
        int64 i64Val = 2;
        int32 i32Val = 3;
        int32 i16Val = 4;
        int32 i8Val = 5;
        uint64 u64Val = 6;
        uint32 u32Val = 7;
        uint32 u16Val = 8;
        uint32 u8Val = 9;
        double f64Val = 10;
        float f32Val = 11;
        Map mapVal = 12;
        Array arrayVal = 13;
    }
}

message Map {
    map<string, Types> entries = 1;
}

message Array {
    repeated Types values = 1;
}


message SetRequest {
    string key = 1;
    Types value = 2;
}

message GetRequest {
    string key = 1;
}

service KeyValue {
    rpc Set (SetRequest) returns (Empty);
    rpc Get (GetRequest) returns (Types);
}

message Empty {}
